# roomforge

./: .gitignore  install-proxmox.sh  install.sh  pyproject.toml
backend/: ai_render.py  analyze.py  blender_scene.py  claude_api.py  depth_position.py  dgx_manager.py  furniture_3d.py  furniture_search.py  main.py  material_extract.py  modify.py  proposals.py  reconstruct.py  render.py  session.py
dgx/: deploy.sh
dgx/blender-render/: .gitignore  Dockerfile  build-blender.sh  docker-compose.yml  service.py
dgx/chord-material/: Dockerfile  docker-compose.yml  service.py
dgx/depth-estimation/: Dockerfile  docker-compose.yml  service.py
dgx/dn-splatter/: Dockerfile  docker-compose.yml  service.py
dgx/flux-render/: Dockerfile  docker-compose.yml  service.py
dgx/trellis/: Dockerfile  docker-compose.yml  service.py
frontend/: app.js  index.html  manifest.json  style.css
sessions/: house_style.json
sessions/room_templates/: lazienka_master.json  pokoj_dziecka.json  salon.json  sypialnia.json
